// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form rendering 1`] = `
<div
  className="well"
>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      disabled={false}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="mdcKeyInput"
        >
          MDC key name
        </label>
        <input
          className="form-control"
          id="mdcKeyInput"
          name="key"
          onChange={[Function]}
          type="text"
          value="clientId"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="mdcValueInput"
        >
          Expected value
        </label>
        <input
          className="form-control"
          id="mdcValueInput"
          name="value"
          onChange={[Function]}
          type="text"
          value="some_ring"
        />
      </div>
      <div
        className="form-group"
        id="log-prefix-input-div"
      >
        <label
          htmlFor="logPrefixInput"
        >
          Log prefix
        </label>
        <input
          className="form-control"
          id="logPrefixInput"
          name="prefix"
          onChange={[Function]}
          type="text"
          value="com.farpost.search"
        />
      </div>
      <div
        className="form-group"
        id="severity-input-div"
      >
        <label
          htmlFor="severityInput"
        >
          Severity
        </label>
        <select
          className="form-control"
          id="severityInput"
          name="severity"
          onChange={[Function]}
          value="INFO"
        >
          <option
            value="TRACE"
          >
            TRACE
          </option>
          <option
            value="DEBUG"
          >
            DEBUG
          </option>
          <option
            value="INFO"
          >
            INFO
          </option>
          <option
            value="WARN"
          >
            WARN
          </option>
          <option
            value="ERROR"
          >
            ERROR
          </option>
        </select>
      </div>
    </fieldset>
  </form>
  <a
    className="connection-form-button btn btn-success"
    href="#"
    onClick={[Function]}
  >
    LISTEN
  </a>
</div>
`;

exports[`Form rendering 2`] = `
<div
  className="well"
>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      disabled={true}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="mdcKeyInput"
        >
          MDC key name
        </label>
        <input
          className="form-control"
          id="mdcKeyInput"
          name="key"
          onChange={[Function]}
          type="text"
          value="clientId"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="mdcValueInput"
        >
          Expected value
        </label>
        <input
          className="form-control"
          id="mdcValueInput"
          name="value"
          onChange={[Function]}
          type="text"
          value="some_ring"
        />
      </div>
      <div
        className="form-group"
        id="log-prefix-input-div"
      >
        <label
          htmlFor="logPrefixInput"
        >
          Log prefix
        </label>
        <input
          className="form-control"
          id="logPrefixInput"
          name="prefix"
          onChange={[Function]}
          type="text"
          value="com.farpost.search"
        />
      </div>
      <div
        className="form-group"
        id="severity-input-div"
      >
        <label
          htmlFor="severityInput"
        >
          Severity
        </label>
        <select
          className="form-control"
          id="severityInput"
          name="severity"
          onChange={[Function]}
          value="INFO"
        >
          <option
            value="TRACE"
          >
            TRACE
          </option>
          <option
            value="DEBUG"
          >
            DEBUG
          </option>
          <option
            value="INFO"
          >
            INFO
          </option>
          <option
            value="WARN"
          >
            WARN
          </option>
          <option
            value="ERROR"
          >
            ERROR
          </option>
        </select>
      </div>
    </fieldset>
  </form>
  <a
    className="connection-form-button btn btn-danger"
    href="#"
    onClick={[Function]}
  >
    STOP
  </a>
</div>
`;
